Fixes : Image overlay on Column block is positioning on top of content #278

--- a/src/blocks/row/styles/style.scss
+++ b/src/blocks/row/styles/style.scss
@@ -75,6 +75,14 @@
 	h6 {
 		color: inherit;
 	}
+
+	&__inner{
+		&.has-background-overlay{
+			> [class*="wp-block-"]{
+				position: relative;
+			}
+		}
+	}
 }
 
 //Fix background color contrast issue
