--- a/src/blocks/layout/styles/editor.scss
+++ b/src/blocks/layout/styles/editor.scss
@@ -17,7 +17,7 @@
 }
 
 .components-modal--coblocks-layouts.components-modal__frame {
-	min-height: 92%;
+	min-height: 60%;
 
 	@media (min-width: 600px) {
 		max-width: 860px;
@@ -70,30 +70,43 @@
 		position: relative;
 		transition: box-shadow 50ms ease-in-out;
 		width: calc(33.333% - 20px);
+
+		&:hover {
+			.coblocks-layouts__list-item-screenshot {
+				opacity: 0.3;
+			}
+		}
 	}
 
 	&-item-screenshot {
 		display: block;
 		max-width: 100%;
+		transition: opacity 200ms cubic-bezier(0.694, 0, 0.335, 1), visibility 300ms step-end;
 	}
 
 	&-item-action-button.components-button {
 		background: transparent;
 		border: 0;
+		border-radius: 2px;
 		bottom: 0;
 		box-shadow: none;
+		color: #23282d !important;
 		height: 100%;
 		justify-content: center;
 		left: 0;
 		opacity: 0;
+		padding: 0;
 		position: absolute;
 		right: 0;
 		text-align: center;
+		text-shadow: none;
 		top: 0;
-		transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), visibility 300ms step-end;
+		transition: opacity 200ms cubic-bezier(0.694, 0, 0.335, 1), visibility 300ms step-end;
 		width: 100%;
 
-		&:hover {
+		&:hover,
+		&:active:enabled,
+		&:focus:enabled {
 			background: transparent;
 			border: 0;
 			box-shadow: none;
