Change innerblocks width to full

--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -5,8 +5,14 @@
 		width: 100%;
 
 		&__inner {
-
-			
+			> .editor-inner-blocks{
+				> .editor-block-list__layout{
+					> .wp-block{
+						width: 100%;
+						max-width: auto;
+					}
+				}
+			}
 		}
 	}
 }
