--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -9,7 +9,7 @@
 				> .editor-block-list__layout{
 					> .wp-block{
 						width: 100%;
-						max-width: auto;
+						max-width: none;
 					}
 				}
 			}
