--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -1,7 +1,77 @@
 .wp-block-coblocks-hero {
+	position: relative;
 	&__inner{
+		position: relative;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+	    grid-template-rows: repeat(3, 1fr);
+
 		&.is-fullscreen{
 			height: 100vh;
+		}
+
+		//grid alignment
+		&.hero-top-left-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 1;
+    			grid-row: 1;
+			}
+		}
+
+		&.hero-top-center-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 2;
+    			grid-row: 1;
+			}
+		}
+
+		&.hero-top-right-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 3;
+    			grid-row: 1;
+			}
+		}
+
+		&.hero-center-left-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 1;
+    			grid-row: 2;
+			}
+		}
+
+		&.hero-center-center-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 2;
+    			grid-row: 2;
+			}
+		}
+
+		&.hero-center-right-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 3;
+    			grid-row: 2;
+			}
+		}
+
+		&.hero-bottom-left-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 1;
+    			grid-row: 3;
+			}
+		}
+
+		&.hero-bottom-center-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 2;
+    			grid-row: 3;
+			}
+		}
+
+		&.hero-bottom-right-align{
+			> .wp-block-coblocks-hero__box{
+				grid-column: 3;
+    			grid-row: 3;
+			}
 		}
 	}
 }
