--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -1,64 +1,391 @@
-.coblocks--about-wrap{
-	max-width: 720px;
-	margin: 50px auto 25px;
-	color: #000;
+.coblocks_page_coblocks--welcome {
+	background: #f3f4f5;
+
+	#wpcontent {
+		padding-left: 0;
+	}
+
+	#wpbody-content {
+		margin: 0 10px;
+
+		@media (min-width: 560px) {
+			margin: 0;
+		}
+	}
+}
+
+.coblocks--about-wrap {
 	background: #fff;
-    border: 1px solid #e1e1e1;
-    padding: 50px;
-    box-shadow: 1px 5px 15px rgba(0,0,0,0.02);
-    border-radius: 2px;
-    text-align: left;
+	border: 1px solid #e2e4e7;
+	box-shadow: 0 2px 30px rgba(25, 30, 35, 0.05);
+	color: #000;
+	margin: 10px auto 25px 0;
+	max-width: 540px;
+	text-align: left;
+	width: calc(100% - 21px);
 
-    .aligncenter{
-    	text-align: center;
-    }
+	@media (min-width: 560px) {
+		margin-left: auto;
+		width: 100%;
+		margin-top: 30px;
+	}
 
-    .coblocks--logo{
-    	display: block;
-    	text-align: center;
-    	img{
-    		max-width: 80px;
-    	}
-    }
+	.aligncenter {
+		text-align: center;
+	}
 
-    .about-text{
-    	margin: 0px;
-    	padding: 0px 50px;
-    }
+	.coblocks--logo {
+		align-items: center;
+		background: #fff;
+		border-bottom: 1px solid #e2e4e7;
+		display: flex;
+		flex-direction: row;
+		height: 50px;
+		justify-content: space-between;
+		padding: 0 20px;
+		position: sticky;
+		top: 32px;
+		z-index: 10;
 
-    h1{
-    	color: #000;
-    	text-align: center;
-    	font-size: 31px;
-    	margin: 20px 0px 30px;
-    }
-    .about-description{
-    	font-size: 16px;
-    	
-	    .featured-video{
-	    	margin-top: 50px;
-	    	text-align: center;
-	    }
-	    .button{
-	    	font-size: 18px;
-	    	height: auto;
-	    	width: auto;
-	    	padding: 15px 30px;
-	    	margin: 10px;
-	    	background: #FFFFFF;
-	    	color: #1E35B9;
-	    	border: 2px solid #1E35B9;
-	    	text-shadow: none;
-	    	box-shadow: none;
+		> div {
+			align-items: center;
+			display: flex;
+			flex-direction: row;
+			flex-grow: 1;
+			justify-content: left;
 
-	    	&.button-primary{
-	    		background: #1E35B9;
-	    		color: #FFFFFF;
-	    	}
-	    }
+			svg {
+				fill: #23282d;
+				position: relative;
+				top: 1px;
+			}
+		}
 
-	    iframe{
-	    	max-width: 100%;
-	    }
-    }
+		a {
+			display: block;
+		}
+
+		.components-button {
+			appearance: none;
+			align-items: center;
+			background: none;
+			border-radius: 4px;
+			border: 0;
+			border: none;
+			color: #555d66;
+			cursor: pointer;
+			display: flex;
+			display: inline-flex;
+			font-size: 13px;
+			margin: 0;
+			overflow: hidden;
+			padding: 8px;
+			position: relative;
+			text-decoration: none;
+
+			&:hover {
+				background-color: #fff;
+				box-shadow: inset 0 0 0 1px #e2e4e7, inset 0 0 0 2px #fff, 0 1px 1px rgba(25, 30, 35, 0.2);
+				color: #191e23;
+			}
+
+			&:focus {
+				background-color: #fff;
+				box-shadow: inset 0 0 0 1px #6c7781, inset 0 0 0 2px #fff;
+				color: #191e23;
+				outline: 2px solid transparent;
+				outline-offset: -2px;
+			}
+		}
+	}
+
+	.about-text {
+		margin: 0;
+		padding: 0 50px;
+	}
+
+	h1 {
+		color: #23282d;
+		font-size: 1rem;
+		font-weight: 700;
+		margin: 0;
+		margin-left: 10px;
+	}
+
+	h2 {
+		color: #23282d;
+		font-size: 1.6em;
+		line-height: 1.45;
+		margin-bottom: 10px;
+		margin-top: 0;
+	}
+
+	h3 {
+		color: #23282d;
+		font-size: 1.2em;
+		font-weight: 600;
+		line-height: 1.5;
+		margin-bottom: 0;
+		margin-top: 0;
+	}
+
+	p {
+		color: #444;
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 1.6;
+		margin-bottom: 20px;
+	}
+
+	a {
+		color: #1e35b9;
+	}
+
+	.about-description {
+		padding: 20px;
+	}
+
+	.video-frame {
+		display: block;
+		margin: 30px 0;
+		cursor: pointer;
+
+		img {
+			max-width: 100%;
+			vertical-align: middle;
+		}
+
+		&:focus {
+			box-shadow: none;
+			outline: 1px solid #fff;
+			outline-offset: -4px;
+		}
+	}
+
+	.button-wrap {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 0;
+		margin-top: 30px;
+		display: none;
+
+		.button {
+			background: #fff;
+			border: 2px solid #1e35b9;
+			box-shadow: none;
+			color: #1e35b9;
+			font-size: 17px;
+			height: auto;
+			padding: 12px 20px;
+			text-align: center;
+			text-shadow: none;
+			width: 48%;
+
+			&.button-primary {
+				background: #1e35b9;
+				color: #fff;
+			}
+		}
+	}
+}
+
+/*! Lity - v2.3.1 - 2018-04-20
+* http://sorgalla.com/lity/
+* Copyright (c) 2015-2018 Jan Sorgalla; Licensed MIT */
+.lity {
+	z-index: 9990;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	white-space: nowrap;
+	background: #0b0b0b;
+	background: rgba(0, 0, 0, 0.9);
+	outline: none !important;
+	opacity: 0;
+	-webkit-transition: opacity 0.3s ease;
+	-o-transition: opacity 0.3s ease;
+	transition: opacity 0.3s ease;
+}
+.lity.lity-opened {
+	opacity: 1;
+}
+.lity.lity-closed {
+	opacity: 0;
+}
+.lity * {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.lity-wrap {
+	z-index: 9990;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	text-align: center;
+	outline: none !important;
+}
+.lity-wrap:before {
+	content: "";
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+	margin-right: -0.25em;
+}
+.lity-loader {
+	z-index: 9991;
+	color: #fff;
+	position: absolute;
+	top: 50%;
+	margin-top: -0.8em;
+	width: 100%;
+	text-align: center;
+	font-size: 14px;
+	font-family: Arial, Helvetica, sans-serif;
+	opacity: 0;
+	-webkit-transition: opacity 0.3s ease;
+	-o-transition: opacity 0.3s ease;
+	transition: opacity 0.3s ease;
+}
+.lity-loading .lity-loader {
+	opacity: 1;
+}
+.lity-container {
+	z-index: 9992;
+	position: relative;
+	text-align: left;
+	vertical-align: middle;
+	display: inline-block;
+	white-space: normal;
+	max-width: 100%;
+	max-height: 100%;
+	outline: none !important;
+}
+.lity-content {
+	z-index: 9993;
+	width: 100%;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	-o-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: -webkit-transform 0.3s ease;
+	transition: -webkit-transform 0.3s ease;
+	-o-transition: -o-transform 0.3s ease;
+	transition: transform 0.3s ease;
+	transition: transform 0.3s ease, -webkit-transform 0.3s ease, -o-transform 0.3s ease;
+}
+.lity-loading .lity-content,
+.lity-closed .lity-content {
+	-webkit-transform: scale(0.8);
+	-ms-transform: scale(0.8);
+	-o-transform: scale(0.8);
+	transform: scale(0.8);
+}
+.lity-content:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	display: block;
+	right: 0;
+	width: auto;
+	height: auto;
+	z-index: -1;
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
+.lity-close {
+	z-index: 9994;
+	width: 35px;
+	height: 35px;
+	position: fixed;
+	right: 0;
+	top: 0;
+	-webkit-appearance: none;
+	cursor: pointer;
+	text-decoration: none;
+	text-align: center;
+	padding: 0;
+	color: #fff;
+	font-style: normal;
+	font-size: 35px;
+	font-family: Arial, Baskerville, monospace;
+	line-height: 35px;
+	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+	border: 0;
+	background: none;
+	outline: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+.lity-close::-moz-focus-inner {
+	border: 0;
+	padding: 0;
+}
+.lity-close:hover,
+.lity-close:focus,
+.lity-close:active,
+.lity-close:visited {
+	text-decoration: none;
+	text-align: center;
+	padding: 0;
+	color: #fff;
+	font-style: normal;
+	font-size: 35px;
+	font-family: Arial, Baskerville, monospace;
+	line-height: 35px;
+	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+	border: 0;
+	background: none;
+	outline: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+.lity-close:active {
+	top: 1px;
+}
+/* Image */
+.lity-image img {
+	max-width: 100%;
+	display: block;
+	line-height: 0;
+	border: 0;
+}
+/* iFrame */
+.lity-iframe .lity-container,
+.lity-youtube .lity-container,
+.lity-vimeo .lity-container,
+.lity-facebookvideo .lity-container,
+.lity-googlemaps .lity-container {
+	width: 100%;
+	max-width: 964px;
+}
+.lity-iframe-container {
+	width: 100%;
+	height: 0;
+	padding-top: 56.25%;
+	overflow: auto;
+	pointer-events: auto;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-overflow-scrolling: touch;
+}
+.lity-iframe-container iframe {
+	position: absolute;
+	display: block;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+	background: #000;
+}
+.lity-hide {
+	display: none;
 }
