--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -1,3 +1,5 @@
+//
+
 .coblocks_page_coblocks--welcome {
 	background: #f3f4f5;
 
@@ -6,7 +8,7 @@
 	}
 
 	#wpbody-content {
-		margin: 0 10px;
+		padding-bottom: 0;
 
 		@media (min-width: 560px) {
 			margin: 0;
@@ -19,15 +21,15 @@
 	border: 1px solid #e2e4e7;
 	box-shadow: 0 2px 30px rgba(25, 30, 35, 0.05);
 	color: #000;
-	margin: 10px auto 25px 0;
-	max-width: 540px;
+	margin: 20px auto 0;
+	max-width: 600px;
 	text-align: left;
 	width: calc(100% - 21px);
+	border-radius: 3px;
 
-	@media (min-width: 560px) {
-		margin-left: auto;
+	@media screen and (max-width: 782px) {
+		margin: -1px auto 0;
 		width: 100%;
-		margin-top: 30px;
 	}
 
 	.aligncenter {
@@ -35,6 +37,7 @@
 	}
 
 	.coblocks--logo {
+		border-radius: 3px 3px 0 0;
 		align-items: center;
 		background: #fff;
 		border-bottom: 1px solid #e2e4e7;
@@ -46,6 +49,15 @@
 		position: sticky;
 		top: 32px;
 		z-index: 10;
+
+		@media screen and (max-width: 782px) {
+			top: 46px;
+		}
+
+		@media screen and (max-width: 600px) {
+			position: inherit;
+			padding: 0 10px;
+		}
 
 		> div {
 			align-items: center;
@@ -82,6 +94,7 @@
 			padding: 8px;
 			position: relative;
 			text-decoration: none;
+			display: none;
 
 			&:hover {
 				background-color: #fff;
@@ -102,6 +115,10 @@
 	.about-text {
 		margin: 0;
 		padding: 0 50px;
+
+		@media screen and (max-width: 782px) {
+			padding: 0 10px;
+		}
 	}
 
 	h1 {
@@ -114,15 +131,16 @@
 
 	h2 {
 		color: #23282d;
-		font-size: 1.6em;
+		font-size: 1.7em;
 		line-height: 1.45;
 		margin-bottom: 10px;
 		margin-top: 0;
+		font-weight: 700;
 	}
 
 	h3 {
 		color: #23282d;
-		font-size: 1.2em;
+		font-size: 1.3em;
 		font-weight: 600;
 		line-height: 1.5;
 		margin-bottom: 0;
