3 column layout selection

--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -25,3 +25,14 @@
 		}
 	}
 }
+
+.edit-post-sidebar{
+	.components-coblocks-visual-dropdown.components-coblocks-visual-dropdown__hero{
+		.components-button-group {
+			.components-coblocks-visual-dropdown__button-wrapper{
+				margin: 0px;
+				width: 33%;
+			}
+		}
+	}
+}
