--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -91,5 +91,15 @@
 				grid-template-rows: auto;
 			}
 		}
+
+		&.hero-top-center-align,
+		&.hero-center-center-align,
+		&.hero-bottom-center-align{
+			h1:before,
+			h2:before {
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
 	}
 }
