--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -25,6 +25,26 @@
 						margin: 0px -10px;
 					}
 				}
+
+				&:before, 
+				&:after{
+					top: 0px;
+				    content: "";
+				    display: block;
+				    width: 3px;
+				    height: 100%;
+				    right: -12px;
+				    opacity: 1;
+				    background: #0085ba;
+				    position: absolute;
+				    -webkit-transition: opacity 100ms cubic-bezier(0.39, 0.575, 0.565, 1);
+				    -o-transition: opacity 100ms cubic-bezier(0.39, 0.575, 0.565, 1);
+				    transition: opacity 100ms cubic-bezier(0.39, 0.575, 0.565, 1);
+				    z-index: 29;
+				}
+				&:before,{
+					left: -12px;
+				}
 			}
 			&.is-fullscreen{
 				height: 100vh;
