--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -23,6 +23,7 @@
 					.components-resizable-box__handle{
 						display: block;
 						margin: 0px -10px;
+						z-index: 90;
 					}
 				}
 
@@ -34,7 +35,7 @@
 				    width: 3px;
 				    height: 100%;
 				    right: -12px;
-				    opacity: 1;
+				    opacity: 0;
 				    background: #0085ba;
 				    position: absolute;
 				    -webkit-transition: opacity 100ms cubic-bezier(0.39, 0.575, 0.565, 1);
@@ -60,6 +61,25 @@
 							display: none;
 						}
 					}
+
+					&.is-resizing{
+						&:after{
+							opacity: 1;
+						}
+					}
+				}
+			}
+
+			&.hero-top-center-align,
+			&.hero-center-center-align,
+			&.hero-bottom-center-align{
+				.wp-block-coblocks-hero__box{
+					&.is-resizing{
+						&:before,
+						&:after{
+							opacity: 1;
+						}
+					}
 				}
 			}
 
@@ -70,6 +90,12 @@
 					> span{
 						.components-resizable-box__handle-right{
 							display: none;
+						}
+					}
+
+					&.is-resizing{
+						&:before{
+							opacity: 1;
 						}
 					}
 				}
