--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -11,6 +11,12 @@
 		.wp-block-coblocks-buttons__inner {
 			justify-content: center;
 		}
+
+		h1::before,
+		h2::before {
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 
 	.has-right-content {
@@ -18,6 +24,11 @@
 
 		.wp-block-coblocks-buttons__inner {
 			justify-content: flex-end;
+		}
+
+		h1::before,
+		h2::before {
+			margin-left: auto;
 		}
 	}
 
@@ -116,8 +127,8 @@
 		&.hero-top-center-align,
 		&.hero-center-center-align,
 		&.hero-bottom-center-align {
-			h1:before,
-			h2:before {
+			h1::before,
+			h2::before {
 				margin-left: auto;
 				margin-right: auto;
 			}
