Fix grid and maxWidth

--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -34,8 +34,8 @@
 
 	&__inner {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		grid-template-rows: repeat(3, 1fr);
+		grid-template-columns: repeat(3, auto);
+		grid-template-rows: repeat(3, auto);
 		position: relative;
 
 		&.is-fullscreen {
