Change grid rows to 1fr again

--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -35,7 +35,7 @@
 	&__inner {
 		display: grid;
 		grid-template-columns: repeat(3, auto);
-		grid-template-rows: repeat(3, auto);
+		grid-template-rows: repeat(3, 1fr);
 		position: relative;
 
 		&.is-fullscreen {
