Add auto margin to display perfectly based on Layouts

--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -51,6 +51,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 1;
 				grid-row: 1;
+				margin-right: auto;
 			}
 		}
 
@@ -58,6 +59,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 2;
 				grid-row: 1;
+				margin: auto;
 			}
 		}
 
@@ -65,6 +67,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 3;
 				grid-row: 1;
+				margin-left: auto;
 			}
 		}
 
@@ -72,6 +75,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 1;
 				grid-row: 2;
+				margin-right: auto;
 			}
 		}
 
@@ -79,6 +83,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 2;
 				grid-row: 2;
+				margin: auto;
 			}
 		}
 
@@ -86,6 +91,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 3;
 				grid-row: 2;
+				margin-left: auto;
 			}
 		}
 
@@ -93,6 +99,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 1;
 				grid-row: 3;
+				margin-right: auto;
 			}
 		}
 
@@ -100,6 +107,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 2;
 				grid-row: 3;
+				margin: auto;
 			}
 		}
 
@@ -107,6 +115,7 @@
 			> .wp-block-coblocks-hero__box {
 				grid-column: 3;
 				grid-row: 3;
+				margin-left: auto;
 			}
 		}
 
