--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -115,13 +115,73 @@
 }
 
 // Block sidebar.
-.edit-post-sidebar {
-	.components-coblocks-visual-dropdown.components-coblocks-visual-dropdown__hero {
-		.components-button-group {
-			.components-coblocks-visual-dropdown__button-wrapper {
-				margin: 0;
-				width: 33%;
+.components-coblocks-css-grid-selector {
+	.components-button-group {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: repeat(3, 1fr);
+		margin-bottom: 1.9em;
+
+		div {
+			background: #fff;
+			padding: 1px;
+		}
+
+		.components-button {
+			background: #edeff0;
+			padding: 20px;
+			border: 0;
+			border-radius: 0 !important;
+			box-shadow: none;
+			height: 100%;
+			width: 100%;
+
+			svg {
+				display: none;
 			}
+
+			&:hover {
+				background: #e3e4e7;
+				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+			}
+
+			&:active:enabled {
+				background: #e3e4e7;
+				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+			}
+
+			&:focus:enabled {
+				background: #e3e4e7;
+				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+			}
+		}
+
+		.is-selected {
+			z-index: 99;
+		}
+
+		.is-selected .components-button {
+			background: #555d66;
+
+			&:focus:enabled {
+				background: #555d66;
+			}
+		}
+
+		div:nth-of-type(1) .components-button {
+			border-radius: 4px 0 0 0 !important;
+		}
+
+		div:nth-of-type(3) .components-button {
+			border-radius: 0 4px 0 0 !important;
+		}
+
+		div:nth-last-of-type(1) .components-button {
+			border-radius: 0 0 4px 0 !important;
+		}
+
+		div:nth-last-of-type(3) .components-button {
+			border-radius: 0 0 0 4px !important;
 		}
 	}
 }
